--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+piupiu:
+    resource: "@PiupiuBundle/Resources/config/routing.yml"
+    prefix:   /
