readme, google api, sandbox routes and controller

--- a/src/PiupiuBundle/Resources/config/routing.yml
+++ b/src/PiupiuBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 piupiu_homepage:
     path:     /
     defaults: { _controller: PiupiuBundle:Default:index }
+
+piupiu_curr_loc:
+    path:   /current_location
+    defaults: { _controller: PiupiuBundle:Default:currentLocation }
