--- a/src/PiupiuBundle/Resources/config/routing.yml
+++ b/src/PiupiuBundle/Resources/config/routing.yml
@@ -6,6 +6,10 @@ piupiu_curr_loc:
     path:   /current_location
     defaults: { _controller: PiupiuBundle:Default:currentLocation }
 
-piupiu_login:
+security_login:
   path: /login
   defaults: { _controller: PiupiuBundle:Login:login }
+
+security_login_check:
+  path: /login_check
+  defaults: { _controller: PiupiuBundle:Login:loginCheck }
