--- a/src/PiupiuBundle/Resources/config/services.yml
+++ b/src/PiupiuBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    piupiu.example:
-#        class: PiupiuBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    login_authenticator:
+        class: PiupiuBundle\Security\LoginAuthenticator
+        arguments: ["@service_container"]
