security, begin password forgotten

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
     - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/current_location, roles: ROLE_PRO }
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/forgot-password, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/, roles: IS_AUTHENTICATED_FULLY}
 
   encoders:
