--- a/src/PiupiuBundle/Resources/config/services.yml
+++ b/src/PiupiuBundle/Resources/config/services.yml
@@ -1,9 +1,14 @@
 services:
     login_authenticator:
-        class: PiupiuBundle\Security\LoginAuthenticator
-        arguments: ["@service_container"]
+      class: PiupiuBundle\Security\LoginAuthenticator
+      arguments: ["@service_container"]
     piupiu.last_login_subscriber:
-            class: PiupiuBundle\EventListener\LastLoginSubscriber
-            arguments: ["@doctrine.orm.entity_manager"]
-            tags:
-                - { name: kernel.event_subscriber }
+      class: PiupiuBundle\EventListener\LastLoginSubscriber
+      arguments: ["@doctrine.orm.entity_manager"]
+      tags:
+        - { name: kernel.event_subscriber }
+    piupiu.password_forgotten:
+      class: PiupiuBundle\Service\PasswordForgotten
+      arguments: ["@doctrine.orm.entity_manager",
+        "@security.password_encoder",
+        "@service_container"]
