--- a/src/PiupiuBundle/Resources/config/routing.yml
+++ b/src/PiupiuBundle/Resources/config/routing.yml
@@ -16,3 +16,7 @@ security_logout:
 piupiu_pwd_forgot:
   path: /forgot-password
   defaults: { _controller: PiupiuBundle:Login:pwdForgot }
+
+piupiu_change_pwd:
+  path: /change-password
+  defaults: { _controller: PiupiuBundle:Login:changePwd}
