register form init

--- a/src/PiupiuBundle/Resources/config/routing.yml
+++ b/src/PiupiuBundle/Resources/config/routing.yml
@@ -19,4 +19,8 @@ piupiu_pwd_forgot:
 
 piupiu_change_pwd:
   path: /change-password
-  defaults: { _controller: PiupiuBundle:Login:changePwd}
+  defaults: { _controller: PiupiuBundle:Login:changePwd }
+
+piupiu_create_account:
+  path: /register
+  defaults: { _controller: PiupiuBundle:Login:createAccount }
