added assert in entity

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,6 +19,7 @@ security:
     - { path: ^/current_location, roles: ROLE_PRO }
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/forgot-password, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/, roles: IS_AUTHENTICATED_FULLY}
 
   encoders:
